Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8199744/IncorrectMsgQualifiedReceiverTest.out
IncorrectMsgQualifiedReceiverTest.java:9:91: compiler.err.this.as.identifier
IncorrectMsgQualifiedReceiverTest.java:10:91: compiler.err.this.as.identifier
2 errors
